fix scrolling and layout issue

--- a/styles/ult-terminal.less
+++ b/styles/ult-terminal.less
@@ -29,11 +29,6 @@
       line-height: 20px;
     }
   }
-  .cli-panel-body {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-  }
   .terminal {
     flex-grow: 1;
     overflow-y: scroll;
